fixed the bug of moving tooltip and the bug of not showing no objects/fields available when the listbox is empty

--- a/quick-form-app/src/components/create-form-wizard/createFormWizard.css
+++ b/quick-form-app/src/components/create-form-wizard/createFormWizard.css
@@ -190,7 +190,7 @@
   color: #2d2d2e;
   background: #fff;
 }
-.wizard-listbox-entry:last-child { border-bottom: none; }
+/* .wizard-listbox-entry:last-child { border-bottom: none; } */
 .wizard-listbox-entry.selected, .wizard-listbox-entry.active {
   background: #e2f5fe !important;
 }
